[gd_scene load_steps=6 format=3 uid="uid://dvevexy02jlkw"]

[ext_resource type="Script" path="res://scripts/credits.gd" id="1_h2qr8"]
[ext_resource type="Script" path="res://scripts/animated_background.gd" id="2_2weov"]
[ext_resource type="Texture2D" uid="uid://jq016fk4m4t2" path="res://assets/Summer4.png" id="3_76hu3"]
[ext_resource type="Texture2D" uid="uid://7bfjscj8x43n" path="res://assets/Summer5.png" id="4_6pbm5"]
[ext_resource type="Texture2D" uid="uid://dpfljrjra6bhg" path="res://assets/Summer6.png" id="5_pl4dq"]

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2qr8")

[node name="AnimatedBackground" type="Node2D" parent="."]
script = ExtResource("2_2weov")
backgrounds = Array[Texture2D]([ExtResource("3_76hu3"), ExtResource("4_6pbm5"), ExtResource("5_pl4dq")])

[node name="Background1" type="Sprite2D" parent="AnimatedBackground"]
position = Vector2(576, 324)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_76hu3")

[node name="Background2" type="Sprite2D" parent="AnimatedBackground"]
modulate = Color(1, 1, 1, 0)
position = Vector2(580.25, 329)
scale = Vector2(0.496745, 0.49537)
texture = ExtResource("4_6pbm5")

[node name="Background3" type="Sprite2D" parent="AnimatedBackground"]
modulate = Color(1, 1, 1, 0)
position = Vector2(576, 328)
scale = Vector2(0.5, 0.493827)
texture = ExtResource("5_pl4dq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedBackground"]

[node name="StatsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Menu"
flat = true

[node name="CoinsLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TimeLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="EnemiesLabel" type="Label" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="StatsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.98436, 0.556089, 0.684753, 1)
theme_override_font_sizes/font_size = 24
text = "THANKS FOR PLAYING <3"
